--- a/5 - Construtores, palavra this, sobrecarga/Aula 54/Aula  54/Aula 54.csproj
+++ b/5 - Construtores, palavra this, sobrecarga/Aula 54/Aula  54/Aula 54.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Exercicio_Estrutura_for</RootNamespace>
+    <RootNamespace>Aula__54</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
